Fix spacing

--- a/main.css
+++ b/main.css
@@ -321,6 +321,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 4vw;
+    margin: 0 10vw;
     margin-top: max( 4vw, 2rem );
     padding: 2rem max( 4vw, 2rem );
 
@@ -333,7 +334,6 @@ body {
       flex: 1;
       .img__container {
         width: 100%;
-        min-width: 300px;
         img {
           width: 100%;
           border-radius: 2vw
@@ -346,7 +346,7 @@ body {
       flex-direction: column;
       justify-content: center;
       flex: 1.2;
-      width: 400px;
+      min-width: 400px;
 
       .description {
         font-size: clamp( 1rem, 1.6vw, 1.4rem );
@@ -388,7 +388,7 @@ body {
       }
     }
 
-    &:nth-child(odd) {
+    /* &:nth-child(odd) {
       flex-direction: row-reverse;
       background-color: #1d1d1d;
 
@@ -397,8 +397,6 @@ body {
       }
 
       .content {
-        min-width: 100%;
-
         .description {
           text-align: right
         }
@@ -423,7 +421,7 @@ body {
           }
         }
       }
-    }
+    } */
   }
 }
 
@@ -559,10 +557,10 @@ body {
   }
 
   #my_projects {
-
     .project {
+      margin: 0 2vw;
       .content {
-        width: 100%;
+        min-width: 100%;
 
         .links {
           a {
